fix images gap

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,9 +2,12 @@
 * Стили компонента Buton (Load more)
 */
 .Button {
+    margin-left: calc(45%);
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 8px 16px;
     border-radius: 2px;
-    background-color: #3f51b5;
+    background-color: #16288e;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     display: inline-block;
