--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -2,11 +2,12 @@
  * Стили компонента ImageGallery
  */
  .ImageGallery {
+    margin-top: 30px;
     display: grid;
-    max-width: calc(100vw - 48px);
+    max-width: calc(80vw - 48px);
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-gap: 16px;
-    margin-top: 0;
+    /* margin-top: 0; */
     margin-bottom: 0;
     padding: 0;
     list-style: none;
