--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -15,7 +15,9 @@
     padding-top: 12px;
     padding-bottom: 12px;
     color: #fff;
-    background-color: #3f51b5;
+
+    background: linear-gradient(219.46deg, #110036 27.63%, #170059 100%), linear-gradient(219.46deg, #FFFFFF 27.63%, #19004E 100%), radial-gradient(100% 246.94% at 100% 100%, #FFFFFF 0%, #000353 100%), linear-gradient(121.18deg, #1400FF 0.45%, #3A0000 100%), linear-gradient(337.69deg, #DC52FF 8.44%, #00BDBD 84.19%), linear-gradient(222.34deg, #FFFFFF 12.99%, #008171 87.21%), linear-gradient(150.76deg, #0015D5 15.35%, #000B6C 89.57%);
+    background-blend-mode: screen, overlay, overlay, difference, difference, difference, normal;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
       0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   }
